--- a/src/index.css
+++ b/src/index.css
@@ -127,6 +127,7 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
   font-weight: 700;
+  max-width:95%;
 }
 
 button {
